--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,26 @@
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
+<style>
+    .inner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 8px solid #d14b0d; /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+</style>
 <script type="text/javascript">
     function open_file() {
         document.getElementById('input_file').click();
@@ -55,6 +75,9 @@
             </div>
             <div>
                 <button type="button" class="btn btn-primary btn-lg " id="btn-predict" style="margin: 1rem;">Extract Text!</button>
+                <div class="inner-container">
+                    <div class="loader" style="display:none; text-align: center;"></div>
+                </div>
                 <div id="result"></div>
             </div>
         </div>
